Fix buttons covering loader; scroll-to-top
- The loading bar is now above the floating buttons.
- Clicking links in entries from list pages now correctly scrolls to the top of the linked page.

--- a/src/style.css
+++ b/src/style.css
@@ -613,6 +613,7 @@ abbr {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
 }
 @keyframes l3 {
     100% {transform: translateX(-50%)}
